# ftrack-s3-accessor

./: .gitignore  Pipfile  README.md  pyproject.toml  s3.py
.github/workflows/: pre_release.yml  pull_request.yml
accessor/: s3.py
ftrack_s3_accessor/: __init__.py  s3.py
plugin/: s3_plugin.py
plugins/: s3_location.py  transfer_components_action.py
scripts/: s3_download.py  s3_upload.py  s3_upload_get_or_create.py  start_ftrack_with_s3.py
tests/: test_ftrack_s3_accessor.py
